[tool.poetry]
name = "dodiscover"
#
# 0.0.0 is standard placeholder for poetry-dynamic-versioning
# any changes to this should not be checked in
#
version = "0.0.0"
description = "Causal Discovery for Python"
authors = ["PyWhy Community <robertness@microsoft.com>"]
license = "MIT"
readme = "README.md"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ['dodiscover*']
exclude = ['dodiscover*tests']

[tool.poetry.dependencies]
python = "^3.8"
beartype = "^0.10.4"
numpy = "^1.16.0"
scipy = "^1.2.0"
networkx = "^2.8.3"
scikit-learn = "^1.1.0"
importlib-resources = { version = "*", python = "<3.9" }
# pywhy-graphs = { git = "https://github.com/py-why/pywhy-graphs.git" }
# graphs = { git = "https://github.com/py-why/graphs.git" }

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
mypy = "^0.971"
poethepoet = "^0.16.0"
black = "^22.6.0"
isort = "^5.10.1"
pylint = "^2.14.5"
flake8 = "^5.0.4"
bandit = "^1.7.4"
portray = "^1.7.0"
semversioner = "^1.1.0"
pydocstyle = "^6.1.1"
matplotlib = {version = "^3.5",  optional = true }
memory_profiler = { version = "*", optional = true }
numpydoc = { version = "*", optional = true }
pydata-sphinx-theme = { version = "*", optional = true }
sphinx = { version = "*", optional = true }
sphinxcontrib-bibtex = { version = "*", optional = true }
sphinx-issues = { version = "*", optional = true }
sphinx-copybutton = { version = "*", optional = true }
sphinx-gallery = { version = "*", optional = true }
sphinx_rtd_theme = { version = "*", optional = true }
typing-extensions = { version = "*", optional = true }
pandas = { version = "*", optional = true }
graphviz = { version = "*", optional = true }
dowhy = { version = "*", optional = true }

[tool.poetry.extras]
docs = [
    "sphinx",
    "memory_profiler",
    "pydata-sphinx-theme",
    "sphinxcontrib-bibtex",
    "sphinx-issues",
    "sphinx-copybutton",
    "sphinx-gallery",
    "sphinx_rtd_theme",
    "pandas",
    "matplotlib",
    "graphviz",
    "dowhy",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.portray]
output_dir = ['site']
modules = ['dodiscover']

[tool.poe.tasks]
_flake8 = 'flake8'
_pylint = 'pylint --recursive=y ./dodiscover'
_bandit = 'bandit -r dodiscover'
_black = 'black .'
_isort = 'isort .'
_black_check = 'black --check dodiscover examples'
_isort_check = 'isort --check .'
_pydocstyle = 'pydocstyle .'
_codespell = 'codespell . --ignore-words=.codespellignore'
_changelog = 'semversioner changelog > CHANGELOG.md'
_apply_version = 'semversioner release'

start_docs = 'portray in_browser'
build_docs = 'portray as_html --overwrite'
typecheck = 'mypy -p dodiscover --config-file pyproject.toml'
unit_test = 'pytest tests/unit_tests --cov=main/dodiscover --cov-report=xml --cov-config=pyproject.toml'
integration_test = 'pytest tests/integration_tests'

[[tool.poe.tasks.lint]]
sequence = ['_pylint', '_flake8', '_bandit', '_codespell', '_pydocstyle']
ignore_fail = 'return_non_zero'

[[tool.poe.tasks.apply_format]]
sequence = ['_black', '_isort']
ignore_fail = 'return_non_zero'

[[tool.poe.tasks.check_format]]
sequence = ['_black_check', '_isort_check']
ignore_fail = 'return_non_zero'

#
# a standard verification sequence for use in pull requests
#
[[tool.poe.tasks.verify]]
sequence = ['apply_format', 'lint', 'typecheck', 'unit_test']
ignore_fail = "return_non_zero"

[[tool.poe.tasks.release]]
sequence = ['_changelog', '_apply_version']

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
      __pycache__
    | \.github
    | setup.py
    | docs/
    | examples/
)
'''

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 100
py_version = 38
extend_skip_glob = ['setup.py', 'docs/*', 'examples/*']

[tool.pydocstyle]
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^dodiscover.*'
add_ignore = 'D100,D104,D107'

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
filterwarnings = []

[tool.coverage.run]
branch = true
cover_pylib = false
source = ['dodiscover']
omit = ['**/__init__.py', '**/tests/**']

[tool.coverage.report]
exclude_lines = ['pragma: no cover', 'if __name__ == .__main__.:']
precision = 2
